--- a/GameOptimizer.Tests/GameOptimizer.Tests.csproj
+++ b/GameOptimizer.Tests/GameOptimizer.Tests.csproj
@@ -6,11 +6,16 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="StrongInject" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
