--- a/GameOptimizer.Tests/GameOptimizer.Tests.csproj
+++ b/GameOptimizer.Tests/GameOptimizer.Tests.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../Shared.targets"/>
+  
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
 
@@ -16,6 +18,10 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
     <PackageReference Include="StrongInject" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
