--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Logic\Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestImplementations\" />
+  </ItemGroup>
+
 </Project>
