--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>LaunchIt</AssemblyName>
   </PropertyGroup>
   
   <ItemGroup>
