--- a/Presentation/Properties/launchSettings.json
+++ b/Presentation/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Presentation": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\windows\\system32\\notepad.exe"
+      "commandLineArgs": "reset C:\\windows\\system32\\notepad.exe"
     }
   }
 }
