--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <None Include="bin\Debug\net5.0\LaunchIt.yml" />
+    <None Include="bin\Release\net5.0\LaunchIt.yml" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
