--- a/Presentation/Properties/launchSettings.json
+++ b/Presentation/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Presentation": {
       "commandName": "Project",
-      "commandLineArgs": "edit"
+      "commandLineArgs": "notepad.exe"
     }
   }
 }
