--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -2,6 +2,10 @@
 
   <Import Project="../Shared.targets" />
 
+  <ItemGroup>
+    <EmbeddedResource Include="./Help/Usage.txt" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
