--- a/Presentation/Properties/launchSettings.json
+++ b/Presentation/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Presentation": {
-      "commandName": "Project",
-      "commandLineArgs": "notepad.exe"
+      "commandName": "Project"
     }
   }
 }
