Use an extension method to turn a SwitchCommand to a command line argument. LaunchIt speaks in first person.

--- a/Presentation/Properties/launchSettings.json
+++ b/Presentation/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Presentation": {
-      "commandName": "Project",
-      "commandLineArgs": "-service \"I am a servce\""
+      "commandName": "Project"
     }
   }
 }
