do not returned killed processes. Return nothing and make a kill syn by WaitForExit. Also, if a 'process' ends with .exe, string the extension before attempting to kill it.

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <None Include="bin\Debug\net5.0\LaunchIt.yml" />
+    <None Include="bin\Debug\net5.0\win-x64\LaunchIt.yml" />
     <None Include="bin\Release\net5.0\LaunchIt.yml" />
   </ItemGroup>
   
