Added -config option. It is now possible to tell LaunchIt which configuration you want to use.

--- a/Presentation/Properties/launchSettings.json
+++ b/Presentation/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Presentation": {
       "commandName": "Project",
-      "commandLineArgs": "-run=cmd"
+      "commandLineArgs": "-edit -config=MyFile"
     }
   }
 }
