Update Publish Profile. Change exe file to 'LI.EXE'.

--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -5,13 +5,18 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>LaunchIt</AssemblyName>
+    <AssemblyName>LI</AssemblyName>
     <PublishSingleFile>true</PublishSingleFile>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <SelfContained>false</SelfContained>
     <PublishTrimmed>false</PublishTrimmed>
     <PublishReadyToRun>false</PublishReadyToRun>
     <PublishReadyToRunShowWarnings>false</PublishReadyToRunShowWarnings>
+    <Authors>Antonio Invernizzi V</Authors>
+    <Product>LaunchIt (LI)</Product>
+    <Description>Command line program to shut down services and executables before launching another program.</Description>
+    <Copyright>Antonio Invernizzi V</Copyright>
+    <PackageLicenseFile>LICENSE.MD</PackageLicenseFile>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,6 +34,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.MD">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
